fixing layout issue in feature section

--- a/app/sass/_features.scss
+++ b/app/sass/_features.scss
@@ -1,23 +1,60 @@
 .features {
   @include contentCenter;
   @include contentLeft;
-
-  padding: 1rem 0.5rem;
-  &__body {
+  &__header {
+    br {
+      display: none;
+      @include desktop {
+        display: block;
+      }
+    }
     p {
-      margin-block: 1rem;
+      margin-inline: 2rem;
+      @include desktop {
+        margin-inline: 0;
+      }
+    }
+  }
+  & p {
+    margin-block: 1rem 2rem;
+  }
+  // padding: 1rem 0.5rem;
+
+  .container {
+    background-color: #f9ded5;
+    border-radius: 30px 0 0 30px;
+    display: flex;
+    padding: 0;
+    h3 {
+      padding-block: 0.4rem;
+      @include desktop {
+        font-size: 1.2rem;
+        margin-right: 1rem;
+      }
     }
 
-    .container {
-      background-color: #f9ded5;
-      border-radius: 20px;
-      display: flex;
+    @include desktop {
+      background-color: transparent;
+      position: relative;
+      left: -5.5rem;
+    }
 
-      justify-content: space-between;
-      padding-right: 1rem;
-      @include desktop {
-        background-color: transparent;
+    &__number {
+      display: inline-block;
+      color: white;
+      width: 5rem;
+      background-color: $secondary-color;
+      border-radius: 30px;
+      padding-top: 0.5rem;
+      margin-right: 0.5rem;
+      span {
+        font-weight: bold;
       }
+    }
+  }
+  &__header {
+    @include desktop {
+      margin-right: 5rem;
     }
   }
 }
