--- a/app/sass/_general.scss
+++ b/app/sass/_general.scss
@@ -30,9 +30,11 @@ h1 {
 }
 h2 {
   font-weight: 700;
+  font-size: 2.2rem;
 }
 h3 {
-  font-weight: 600;
+  font-weight: 700;
+  font-size: 1.3rem;
 }
 
 p {
